@@ -1,8 +1,15 @@
+Thu Jul 23 17:07:10 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tests/DCPS/Instance/main.cpp:
+
+	  Updates to Instance test (adjusted wait delay for samples);
+	  improved condition for detecting removed instances.
+
 Thu Jul 23 14:19:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * bin/dcps_tests.lst:
 
-	  Added new Instance test to nightly tests.
+          Added new Instance test to nightly tests.
 
 Wed Jul 22 22:16:34 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
